# SportsProject

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  refresh_pipeline.py  run_api.py
.github/workflows/: ci.yml  deploy.yml
infra/: template.yaml
src/soccer_analytics/: config.py  domain.py
src/soccer_analytics/api/: dependencies.py  main.py  schemas.py
src/soccer_analytics/dashboard/: __init__.py  power_bi.md
src/soccer_analytics/infra/: lambda_handler.py
src/soccer_analytics/ingestion/: service.py
src/soccer_analytics/ingestion/providers/: api_football.py  base.py  mock.py
src/soccer_analytics/storage/: database.py  models.py  repository.py  s3_store.py
src/soccer_analytics/transforms/: metrics.py
tests/: test_api.py  test_metrics.py
