[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soccer-analytics-pipeline"
version = "0.1.0"
description = "Soccer analytics pipeline with FastAPI, PostgreSQL, S3, and AWS Lambda."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34.0",
  "fastapi>=0.115.0",
  "httpx>=0.28.0",
  "mangum>=0.19.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-dateutil>=2.9.0",
  "sqlalchemy>=2.0.36",
  "uvicorn>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true
packages = ["soccer_analytics"]
